<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <!-- Add child views here like EditTexts, Buttons, etc. -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="32dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEmail"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:background="@android:drawable/edit_text"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/password_label"
        android:textColor="#000000"
        android:textSize="16sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:id="@+id/password_field"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:background="@android:drawable/edit_text"
        android:padding="12dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button"
        android:layout_marginTop="48dp"/>

</LinearLayout>